lusparser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function(root) {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { Nodes: peg$parseNodes },
        peg$startRuleFunction  = peg$parseNodes,

        peg$c0 = function(decls) {
                var ret = {consts: {}, nodes: {}, types: {}};
                for(var i=0; i<decls.length; i++) {
                    if(decls[i][0].constant) 
                        for(var j=0; j<decls[i][0].constant.length; j++)
                            ret.consts[decls[i][0].constant[j].name] = decls[i][0].constant[j];
                    else if(decls[i][0].node) 
                        ret.nodes[decls[i][0].node.header.name] = decls[i][0].node;
                    else if(decls[i][0].type) 
                        for(var j=0; j<decls[i][0].type.length; j++)
                            ret.types[decls[i][0].type[j].name] = decls[i][0].type[j];
                }
                return ret;
            },
        peg$c1 = function(constant) {
                return {constant: constant};
            },
        peg$c2 = function(node) {
                return {node: node};
            },
        peg$c3 = function(type) {
                return {type: type} ;
            },
        peg$c4 = function(header, body) {
                return {header: header, body: body}; 
            },
        peg$c5 = "node",
        peg$c6 = peg$literalExpectation("node", false),
        peg$c7 = "function",
        peg$c8 = peg$literalExpectation("function", false),
        peg$c9 = "(",
        peg$c10 = peg$literalExpectation("(", false),
        peg$c11 = ")",
        peg$c12 = peg$literalExpectation(")", false),
        peg$c13 = "returns",
        peg$c14 = peg$literalExpectation("returns", false),
        peg$c15 = ";",
        peg$c16 = peg$literalExpectation(";", false),
        peg$c17 = function(type, name, params, returns) {
                return {type: type, name: name, params: params == null ? [] : params, returns: returns == null ? [] : returns};
            },
        peg$c18 = function(decl, decls) { 
                var ret = []; 
                for(var j=0; j<decl.length; j++)
                    ret.push(decl[j]); 
                for(var i=0; i<decls.length; i++) 
                    for(var j=0; j<decls[i][3].length; j++) 
                        ret.push(decls[i][3][j]); 
                return ret;
            },
        peg$c19 = ":",
        peg$c20 = peg$literalExpectation(":", false),
        peg$c21 = function(idents, type, clock) {
                var ret = [];
                for(var i=0; i<idents.length; i++) 
                    ret.push({name: idents[i], type: type, clock: clock != null ? clock[1] : null});
                return ret; 
            },
        peg$c22 = "when",
        peg$c23 = peg$literalExpectation("when", false),
        peg$c24 = function(clock) { 
                return clock; 
            },
        peg$c25 = function(ident) { 
                return ident; 
            },
        peg$c26 = "let",
        peg$c27 = peg$literalExpectation("let", false),
        peg$c28 = "tel",
        peg$c29 = peg$literalExpectation("tel", false),
        peg$c30 = function(locals, equations) {
                var local = []; 
                for(var i=0; i<locals.length; i++) 
                    for(var j=0; j < locals[i][0].length; j++)
                        local.push(locals[i][0][j]); 
                return {locals: local, equations: equations };
            },
        peg$c31 = function(vardecl) {  
                return vardecl; 
            },
        peg$c32 = function(constdecl) { 
                return constdecl;
            },
        peg$c33 = "var",
        peg$c34 = peg$literalExpectation("var", false),
        peg$c35 = function(decls) { 
                return decls; 
            },
        peg$c36 = "const",
        peg$c37 = peg$literalExpectation("const", false),
        peg$c38 = function(consts) { 
                return consts; 
            },
        peg$c39 = "=",
        peg$c40 = peg$literalExpectation("=", false),
        peg$c41 = function(name, type, value) {
                return {name: name, type: type != null ? type[2] : null, value: value}; 
            },
        peg$c42 = "::",
        peg$c43 = peg$literalExpectation("::", false),
        peg$c44 = function(namespace, local) { 
                return namespace + "::" + local; 
            },
        peg$c45 = function(name) { 
                return name; 
            },
        peg$c46 = function(type) {
                return type; 
            },
        peg$c47 = function(type) { 
                return type; 
            },
        peg$c48 = ",",
        peg$c49 = peg$literalExpectation(",", false),
        peg$c50 = function(first, others) {
                var ret = [first]; 
                for(var i=0; i<others.length; i++) 
                    ret.push(others[i][3]);
                return ret;
            },
        peg$c51 = function(name, type) { 
                return {name: name, type: type}; 
            },
        peg$c52 = "enum",
        peg$c53 = peg$literalExpectation("enum", false),
        peg$c54 = "{",
        peg$c55 = peg$literalExpectation("{", false),
        peg$c56 = "}",
        peg$c57 = peg$literalExpectation("}", false),
        peg$c58 = function(values) { 
                return {values: values} 
            },
        peg$c59 = function(decl) { 
                var ret = [];
                for(var i=0; i<decl.length; i++) 
                    for(var j=0; j<decl[i][0].length; j++)
                        ret.push(decl[i][0][j]);
                return ret;
            },
        peg$c60 = function(names, type) { 
                var ret = []; 
                for(var i=0; i<names.length; i++) 
                    ret.push({name: names[i], type: type}); 
                return ret; 
            },
        peg$c61 = function(name, value) { 
                return [{name: name, value: value }];
            },
        peg$c62 = function(name, type, value) {
                return [{name: name, type: type, value: value }]; 
            },
        peg$c63 = function(ident, idents) { 
                var ret = [ident]; 
                for(var i=0; i<idents.length; i++) 
                    ret.push(idents[i][3]); 
                return ret; 
            },
        peg$c64 = "type",
        peg$c65 = peg$literalExpectation("type", false),
        peg$c66 = function(types) {
                var ret = [];
                for(var i=0; i<types.length; i++) 
                    ret.push(types[i][0]);
                return ret;
            },
        peg$c67 = function(ident, type) { 
                return {name: ident, type: type }; 
            },
        peg$c68 = function(equation, equations) { 
                var ret = [equation]; 
                for(var i=0; i<equations.length; i++) 
                    ret.push(equations[i][1]); 
                return ret; 
            },
        peg$c69 = function(equation) {
                return equation; 
            },
        peg$c70 = function(assertion) {
                return assertion;
            },
        peg$c71 = function(left, right) { 
                return {left: left, right: right}; 
            },
        peg$c72 = function(left) { 
                return left; 
            },
        peg$c73 = function(left, lefts) { 
                var ret = [left]; 
                for(var i=0; i<lefts.length; i++) 
                    ret.push( lefts[i][3] ); 
                return ret; 
            },
        peg$c74 = function(ident) { 
                return {type: "ident", value: ident }; 
            },
        peg$c75 = "assert",
        peg$c76 = peg$literalExpectation("assert", false),
        peg$c77 = function(expr) {
                return {assert: expr}; 
            },
        peg$c78 = "->",
        peg$c79 = peg$literalExpectation("->", false),
        peg$c80 = "fby",
        peg$c81 = peg$literalExpectation("fby", false),
        peg$c82 = /^[^a-zA-Z0-9_]/,
        peg$c83 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], true, false),
        peg$c84 = function() { return "fby"; },
        peg$c85 = function(left, right) { 
                if(right != null) 
                    return {type: "op", op: right[1], operands: [left, right[3]]}; 
                else 
                    return left; 
            },
        peg$c86 = "=>",
        peg$c87 = peg$literalExpectation("=>", false),
        peg$c88 = "or",
        peg$c89 = peg$literalExpectation("or", false),
        peg$c90 = function() { return "or"; },
        peg$c91 = "xor",
        peg$c92 = peg$literalExpectation("xor", false),
        peg$c93 = function() { return "xor"; },
        peg$c94 = "and",
        peg$c95 = peg$literalExpectation("and", false),
        peg$c96 = function() { return "and"; },
        peg$c97 = "<=",
        peg$c98 = peg$literalExpectation("<=", false),
        peg$c99 = "<>",
        peg$c100 = peg$literalExpectation("<>", false),
        peg$c101 = "<",
        peg$c102 = peg$literalExpectation("<", false),
        peg$c103 = ">=",
        peg$c104 = peg$literalExpectation(">=", false),
        peg$c105 = ">",
        peg$c106 = peg$literalExpectation(">", false),
        peg$c107 = "not",
        peg$c108 = peg$literalExpectation("not", false),
        peg$c109 = function() { return "not"; },
        peg$c110 = function(op, right) { 
                return {type: "op", op: op, operands: [right]}; 
            },
        peg$c111 = "+",
        peg$c112 = peg$literalExpectation("+", false),
        peg$c113 = "-",
        peg$c114 = peg$literalExpectation("-", false),
        peg$c115 = function(left, right) { 
                var ret = left; 
                while(right.length > 0) {
                    var op = right.shift();
                    ret = {type: "op", op: op[1], operands: [ret, op[3]]}; 
                }
                return ret; 
            },
        peg$c116 = "*",
        peg$c117 = peg$literalExpectation("*", false),
        peg$c118 = "/",
        peg$c119 = peg$literalExpectation("/", false),
        peg$c120 = "mod",
        peg$c121 = peg$literalExpectation("mod", false),
        peg$c122 = function() { return "mod"; },
        peg$c123 = "div",
        peg$c124 = peg$literalExpectation("div", false),
        peg$c125 = function() { return "div"; },
        peg$c126 = "current",
        peg$c127 = peg$literalExpectation("current", false),
        peg$c128 = function() { return "current"; },
        peg$c129 = "pre",
        peg$c130 = peg$literalExpectation("pre", false),
        peg$c131 = function() { return "pre"; },
        peg$c132 = "#",
        peg$c133 = peg$literalExpectation("#", false),
        peg$c134 = function(op, right) { 
                return {type: "op", op: op, operands: [right] }; 
            },
        peg$c135 = function(left) { 
                return left;
            },
        peg$c136 = function(value) { 
                return {type: "const", value: value }; 
            },
        peg$c137 = function(call) { 
                return call; 
            },
        peg$c138 = function(list) { 
                if(list.length == 1) 
                    return list[0];
                else 
                    return {type: "list", values: list}; 
            },
        peg$c139 = "if",
        peg$c140 = peg$literalExpectation("if", false),
        peg$c141 = "then",
        peg$c142 = peg$literalExpectation("then", false),
        peg$c143 = "else",
        peg$c144 = peg$literalExpectation("else", false),
        peg$c145 = function(cond, thenexpr, elseexpr) { 
                return {type: "op", op: "?:", operands: [cond, thenexpr, elseexpr] };
            },
        peg$c146 = function(expr, exprs) {
                var ret = [expr]; 
                for(var i=0; i<exprs.length; i++) 
                    ret.push(exprs[i][3]); 
                return ret;
            },
        peg$c147 = function(name, value) { 
                return {name: name, value: value}; 
            },
        peg$c148 = function(name, operands) { 
                return {type: "call", name: name, operands: operands == null ? [] : operands}; 
            },
        peg$c149 = function(f) { 
                return f; 
            },
        peg$c150 = function(i) { 
                return i; 
            },
        peg$c151 = function(b) { 
                return b; 
            },
        peg$c152 = "true",
        peg$c153 = peg$literalExpectation("true", false),
        peg$c154 = function() {
                return true    
            },
        peg$c155 = "false",
        peg$c156 = peg$literalExpectation("false", false),
        peg$c157 = function() {
                return false; 
            },
        peg$c158 = /^[0-9]/,
        peg$c159 = peg$classExpectation([["0", "9"]], false, false),
        peg$c160 = function() { 
                return parseInt(text()); 
            },
        peg$c161 = ".",
        peg$c162 = peg$literalExpectation(".", false),
        peg$c163 = function() { 
                return parseFloat(text()); 
            },
        peg$c164 = "%",
        peg$c165 = peg$literalExpectation("%", false),
        peg$c166 = peg$otherExpectation("identifier"),
        peg$c167 = /^[a-zA-Z]/,
        peg$c168 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false),
        peg$c169 = /^[a-zA-Z0-9_]/,
        peg$c170 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false),
        peg$c171 = function(ident) { return keywords.indexOf(ident) === -1; },
        peg$c172 = function(ident) { 
                return ident
            },
        peg$c173 = "\"",
        peg$c174 = peg$literalExpectation("\"", false),
        peg$c175 = /^[^"]/,
        peg$c176 = peg$classExpectation(["\""], true, false),
        peg$c177 = peg$otherExpectation("whitespace"),
        peg$c178 = /^[\t\x0B\f \xA0\uFEFF]/,
        peg$c179 = peg$classExpectation(["\t", "\x0B", "\f", " ", "\xA0", "\uFEFF"], false, false),
        peg$c180 = /^[\n\r]/,
        peg$c181 = peg$classExpectation(["\n", "\r"], false, false),
        peg$c182 = "/*",
        peg$c183 = peg$literalExpectation("/*", false),
        peg$c184 = "*/",
        peg$c185 = peg$literalExpectation("*/", false),
        peg$c186 = "--",
        peg$c187 = peg$literalExpectation("--", false),
        peg$c188 = peg$anyExpectation(),

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseNodes() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parseDecl();
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$currPos;
            s4 = peg$parseDecl();
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              if (s5 !== peg$FAILED) {
                s4 = [s4, s5];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          }
        } else {
          s2 = peg$FAILED;
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseDecl() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseConst_Decl();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseNode_Decl();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c2(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseType_Decl();
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c3(s1);
          }
          s0 = s1;
        }
      }

      return s0;
    }

    function peg$parseNode_Decl() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseNode_Header();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseFN_Body();
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c4(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseNode_Header() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17, s18, s19, s20, s21;
